# esg_bot

./: .env.example  .gitignore  README.md  krx.csv  pyproject.toml  requirements.txt
archive_v1/: pyproject.toml
archive_v1/esg_bot/chain/: __init__.py  rag_chain.py
archive_v1/esg_bot/data_handler/lc_retrieverHandler/: retriever_handler.py
archive_v1/esg_bot/data_handler/lc_vectorstore_handler/: pinecone_vectorstore_handler.py
archive_v1/esg_bot/data_handler/report_handler/: pdf_image_report_handler.py
archive_v1/esg_bot/data_handler/summary_handler/: gpt_summary_handler.py  summary_handler.py
archive_v1/ipynbs/: retreive_test.ipynb
archive_v1/scripts/: chatbot.py  prepare.py  rag_chain_tester.py
codes/: prepare.py  prepare_test.ipynb  rag_chain.py  rag_chain_chatbot.py  rag_chain_tester.py
codes/chain/: rag_chain.py
codes/data_handler/lc_docstore_handler/: docstore_handler.py  in_memory_docstore_handler.py
codes/data_handler/lc_retrieverHandler/: retriever_handler.py
codes/data_handler/lc_vectorstore_handler/: pinecone_vectorstore_handler.py  vectorstore_handler.py
codes/data_handler/report_handler/: pdf_image_report_handler.py
codes/data_handler/summary_handler/: gpt_summary_handler.py
codes/data_handler/utils/: image_base64_utils.py  krx_codes.py  lc_callback_handler.py  paths.py
data/: reports.csv
data/prompts/: ar_section_to_summary.txt  page_to_summary.txt
esg_bot/: __main__.py  choice_answer.py  grade_to_md.py  grader.py  prepare.py  rag_chain_tester.py  reranker.py  retriever.py  utils.py
esg_bot/chain/: rag_chain.py
esg_bot/data_handler/lc_docstore_handler/: docstore_handler.py  in_memory_docstore_handler.py
esg_bot/data_handler/lc_retrieverHandler/: retriever_handler.py
esg_bot/data_handler/lc_vectorstore_handler/: pinecone_vectorstore_handler.py
esg_bot/data_handler/report_handler/: report_handler.py
esg_bot/data_handler/summary_handler/: gpt_summary_handler.py
esg_bot/data_handler/utils/: krx_codes.py  lc_callback_handler.py
esg_chatbot/: chatbot.py
ipynbs/: skt_multimodal.ipynb
notebooks/: annual_reports_analyzer.ipynb  data_editor.ipynb  questions_editor.ipynb  sr_reports_analyzer.ipynb  tmp.csv
ref_and_testing_codes/: pdf_chunk.py  pdf_text_token.py
scripts/: prepare.py  prepare_sr.py  process_sr.py  rag_chain_tester.py  rag_eval_sr.py
st_app/: app.py  chat_agent_spec.md  spec.md
st_app/pages/: 1_Explanations.py  2_Chat.py  3_Source.py  chat.py  explanations.py
st_app/utils/: file_handler.py  generation.py  retrieval.py  ui_components.py
(+1 files in other folders)
